--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
           <p><a target="_blank" href="https://backlogtool.com/git-tutorial/tw/">Git 入門指南</a></p>
           <p><a target="_blank" href="http://dokelung-blog.logdown.com/">Python Fast Track</a></p>
           <p><a target="_blank" href="https://openhome.cc/Gossip/Python/index.html">Python Gossip</a></p>
-          <p><a target="_blank" href="https://www.gitbook.com/book/looly/python-basic/details">零基礎學Python</a></p>
           <p><a target="_blank" href="https://www.gitbook.com/book/normanbb/test/details">跟老齊學Python</a></p>
           <p><a target="_blank" href="https://www.gitbook.com/book/shengwen1997/program_with_c/details">高等C語言</a></p>
-          <p><a target="_blank" href="http://es6.ruanyifeng.com/">ECMAScript 6 入門</a></p>
+          <p><a target="_blank" href="http://es6.ruanyifeng.com/">ECMAScript 入門</a></p>
           
         </div>
       </div>
