--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="container favs-item">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2>Life</h2>
           <p><a target="_blank" href="http://www.google.com/">Google</a></p>
           <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
@@ -35,7 +35,7 @@
           <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
           <p><a target="_blank" href="/diners/">高雄餐廳</a></p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2>News</h2>
           <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
           <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
@@ -46,32 +46,21 @@
           <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
           <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2>Tech</h2>
           <p><a target="_blank" href="https://bitbucket.org/">Bitbucket</a></p>
           <p><a target="_blank" href="https://github.com/">GitHub</a></p>
           <p><a target="_blank" href="https://www.heroku.com/">Heroku</a></p>
           <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap 4</a>, <a target="_blank" href="https://getbootstrap.com/docs/3.3/">v3.3</a></p>
-          <p><a target="_blank" href="https://vuejs.org/">Vue.js</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
           <p><a target="_blank" href="http://www.google.com/design/">Google Design</a></p>
-        </div>
-        <div class="col-md-3">
-          <h2>Book</h2>
-          <p><a target="_blank" href="https://yeasy.gitbooks.io/blockchain_guide/content/">区块链技术指南</a></p>
-          <p><a target="_blank" href="https://backlogtool.com/git-tutorial/tw/">Git 入門指南</a></p>
-          <p><a target="_blank" href="http://dokelung-blog.logdown.com/">Python Fast Track</a></p>
-          <p><a target="_blank" href="https://openhome.cc/Gossip/Python/index.html">Python Gossip</a></p>
-          <p><a target="_blank" href="https://www.gitbook.com/book/normanbb/test/details">跟老齊學Python</a></p>
-          <p><a target="_blank" href="https://www.gitbook.com/book/shengwen1997/program_with_c/details">高等C語言</a></p>
-          <p><a target="_blank" href="http://es6.ruanyifeng.com/">ECMAScript 入門</a></p>
-          
+          <p><a target="_blank" href="/moretech/">more...</a></p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2>Business</h2>
           <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
           <p><a target="_blank" href="http://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
@@ -81,7 +70,7 @@
           <p><a target="_blank" href="https://www.managertoday.com.tw/">經理人月刊</a></p>
           <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2>English</h2>
           <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo奇摩字典</a></p>
           <p><a target="_blank" href="http://www.kekenet.com/">可可英語</a></p>
@@ -92,17 +81,7 @@
           <p><a target="_blank" href="http://www.netspeak.org/">Netspeak</a></p>
           <p><a target="_blank" href="http://linggle.com/">Linggle 10^12</a></p>
         </div>
-        <div class="col-md-3">
-          <h2>Linux</h2>
-          <p><a target="_blank" href="https://www.debian.org/">Debian</a></p>
-          <p><a target="_blank" href="https://debian-handbook.info/browse/stable/">Debian Handbook</a></p>
-          <p><a target="_blank" href="https://www.ubuntu.com/">Ubuntu</a></p>
-          <p><a target="_blank" href="https://help.ubuntu.com/">Ubuntu Documentation</a></p>
-          <p><a target="_blank" href="https://wiki.ubuntu-tw.org/">Ubuntu 正體中文站</a></p>
-          <p><a target="_blank" href="https://www.kali.org/kali-linux-documentation/">Kali</a></p>
-          <p><a target="_blank" href="http://linux.vbird.org/">鳥哥的Linux私房菜</a></p>
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <h2>Miscellaneous</h2>
           <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
           <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a>, <a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">借閱</a></p>
