--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="col-md-4">
           <h2>English</h2>
           <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo奇摩字典</a></p>
-          <p><a target="_blank" href="http://www.kekenet.com/">可可英語</a></p>
+          <p><a target="_blank" href="https://www.vocabulary.com/">Vocabulary.com</a></p>
           <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
           <p><a target="_blank" href="http://voicetube.tw/">VoiceTube</a></p>
           <p><a target="_blank" href="http://learningenglish.voanews.com/">Voice of America</a></p>
