--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap 4</a>, <a target="_blank" href="https://getbootstrap.com/docs/3.3/">v3.3</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
-          <p><a target="_blank" href="/moretech/">more...</a></p>
+          <p><a target="_blank" href="/moretech/">MoreTech</a></p>
         </div>
       </div>
 
