--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
           <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
           <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a>, <a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">借閱</a></p>
           <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
+          <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
+          <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
+          <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
           <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</a></p>
         </div>
       </div>
