--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <p><a target="_blank" href="http://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
           <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
           <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
+          <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
           <p><a target="_blank" href="https://www.managertoday.com.tw/">經理人月刊</a></p>
           <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
