--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
           <p><a target="_blank" href="https://www.managertoday.com.tw/">經理人月刊</a></p>
           <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
+          <p><a target="_blank" href="http://blockcast.it/">區塊客</a></p>
         </div>
         <div class="col-md-4">
           <h2>English</h2>
