--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <p><a target="_blank" href="http://www.facebook.com/">Facebook</a></p>
           <p><a target="_blank" href="http://www.outlook.com/">Outlook</a></p>
           <p><a target="_blank" href="https://www.linkedin.com/uas/login">LinkedIn</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/?gl=TW&hl=zh-tw">YouTube</a></p>
           <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
         </div>
         <div class="col-md-4">
@@ -50,7 +51,7 @@
           <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap 4</a>, <a target="_blank" href="https://getbootstrap.com/docs/3.3/">v3.3</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
-          <p><a target="_blank" href="/tech/">技術資源</a></p>
+          <p><a target="_blank" href="http://blockcast.it/">區塊客</a></p>
         </div>
       </div>
 
@@ -63,9 +64,7 @@
           <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
           <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
-          <p><a target="_blank" href="https://www.managertoday.com.tw/">經理人月刊</a></p>
           <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
-          <p><a target="_blank" href="http://blockcast.it/">區塊客</a></p>
         </div>
         <div class="col-md-4">
           <h2>English</h2>
