--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap 4</a>, <a target="_blank" href="https://getbootstrap.com/docs/3.3/">v3.3</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
-          <p><a target="_blank" href="http://blockcast.it/">區塊客</a></p>
+          <p><a target="_blank" href="http://blockcast.it/">區塊客</a>, <a target="_blank" href="https://blocktrend.today/">區塊勢</a></p>
         </div>
       </div>
 
