--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <p><a target="_blank" href="https://www.linkedin.com/uas/login">LinkedIn</a></p>
           <p><a target="_blank" href="https://www.youtube.com/?gl=TW&hl=zh-tw">YouTube</a></p>
           <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
+          <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07703/a07/">高雄威秀</a></p>
         </div>
         <div class="col-md-4">
           <h2>News</h2>
@@ -39,7 +40,8 @@
           <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
           <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
           <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
-          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
+          <p><a target="_blank" href="http://blockcast.it/">區塊客</a></p>
+          <p><a target="_blank" href="https://blocktrend.today/">區塊勢</a></p>
           <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
           <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
         </div>
@@ -51,7 +53,9 @@
           <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap 4</a>, <a target="_blank" href="https://getbootstrap.com/docs/3.3/">v3.3</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
-          <p><a target="_blank" href="http://blockcast.it/">區塊客</a>, <a target="_blank" href="https://blocktrend.today/">區塊勢</a></p>
+          <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
+          <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT 邦幫忙</a></p>
+          
         </div>
       </div>
 
@@ -61,10 +65,10 @@
           <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
           <p><a target="_blank" href="http://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
           <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
-          <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
-          <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
+          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
           <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
+          <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
         </div>
         <div class="col-md-4">
           <h2>English</h2>
@@ -78,10 +82,11 @@
         </div>
         <div class="col-md-4">
           <h2>Miscellaneous</h2>
-          <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
           <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
-          <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
+          <!-- <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p> -->
           <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
+          <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
+          <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
           <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a>, <a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">借閱</a></p>
           <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
           <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</a></p>
