--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
           <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap 4</a>, <a target="_blank" href="https://getbootstrap.com/docs/3.3/">v3.3</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
+          <p><a target="_blank" href="https://www.staticgen.com/">StaticGen</a></p>
           <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
-          <p><a target="_blank" href="https://ithelp.ithome.com.tw/">iT 邦幫忙</a></p>
-          
         </div>
       </div>
 
