Add Bloomberg Technology url link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
           <p><a target="_blank" href="https://www.staticgen.com/">StaticGen</a></p>
-          <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
+          <p><a target="_blank" href="https://www.bloomberg.com/technology">Bloomberg Technology</a></p>
         </div>
       </div>
 
@@ -81,6 +81,7 @@
         </div>
         <div class="col-md-4">
           <h2>Miscellaneous</h2>
+          <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
           <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
           <!-- <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p> -->
           <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
@@ -88,7 +89,7 @@
           <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
           <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a>, <a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">借閱</a></p>
           <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
-          <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</a></p>
+          <!-- <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</a></p> -->
         </div>
       </div>
 
