--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
           <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
           <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
+          <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
           <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
-          <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
+          <!-- <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p> -->
         </div>
         <div class="col-md-4">
           <h2>English</h2>
