--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
           <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
           <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
-          <p><a target="_blank" href="http://lis.nsysu.edu.tw/bin/home.php">中山圖資處</a>, <a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">借閱</a></p>
+          <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a>, <a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">借閱</a></p>
           <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
           <!-- <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</a></p> -->
         </div>
