--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="/static/main.css?1812202209">
 
   </head>
 
@@ -24,14 +24,14 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Life</h2>
-          <p><a target="_blank" href="http://www.google.com/">Google</a></p>
-          <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
-          <p><a target="_blank" href="http://www.facebook.com/">Facebook</a></p>
-          <p><a target="_blank" href="http://www.outlook.com/">Outlook</a></p>
-          <p><a target="_blank" href="https://www.linkedin.com/uas/login">LinkedIn</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/?gl=TW&hl=zh-tw">YouTube</a></p>
-          <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/">和春影城</a></p>
-          <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07703/a07/">高雄威秀</a></p>
+          <a target="_blank" href="http://www.google.com/"><p>Google</p></a>
+          <a target="_blank" href="https://mail.google.com/"><p>Gmail</p></a>
+          <a target="_blank" href="http://www.facebook.com/"><p>Facebook</p></a>
+          <a target="_blank" href="http://www.outlook.com/"><p>Outlook</p></a>
+          <a target="_blank" href="https://www.linkedin.com/uas/login"><p>LinkedIn</p></a>
+          <a target="_blank" href="https://www.youtube.com/?gl=TW&hl=zh-tw"><p>YouTube</p></a>
+          <a target="_blank" href="http://www.atmovies.com.tw/showtime/t07721/a07/"><p>和春影城</p></a>
+          <a target="_blank" href="http://www.atmovies.com.tw/showtime/t07703/a07/"><p>高雄威秀</p></a>
         </div>
         <div class="col-md-4">
           <h2>News</h2>
@@ -100,7 +100,6 @@
       </footer>
     </div>
 
-    <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
