Modify index page

--- a/index.html
+++ b/index.html
@@ -35,61 +35,63 @@
         </div>
         <div class="col-md-4">
           <h2>News</h2>
-          <p><a target="_blank" href="http://www.bnext.com.tw/">數位時代</a></p>
-          <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
-          <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
-          <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
-          <p><a target="_blank" href="http://blockcast.it/">區塊客</a></p>
-          <p><a target="_blank" href="https://blocktrend.today/">區塊勢</a></p>
-          <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
-          <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome 24h購物</a></p>
+          <a target="_blank" href="http://www.bnext.com.tw/"><p>數位時代</p></a>
+          <a target="_blank" href="http://www.ithome.com.tw/"><p>iThome</p></a>
+          <a target="_blank" href="http://pansci.asia/"><p>PanSci 泛科學</p></a>
+          <a target="_blank" href="https://buzzorange.com/techorange/"><p>TechOrange</p></a>
+          <a target="_blank" href="http://blockcast.it/"><p>區塊客</p></a>
+          <a target="_blank" href="https://blocktrend.today/"><p>區塊勢</p></a>
+          <a target="_blank" href="http://buy.yahoo.com.tw/"><p>Yahoo!奇摩購物</p></a>
+          <a target="_blank" href="http://24h.pchome.com.tw/index/"><p>PChome 24h購物</p></a>
         </div>
         <div class="col-md-4">
           <h2>Tech</h2>
-          <p><a target="_blank" href="https://bitbucket.org/">Bitbucket</a></p>
-          <p><a target="_blank" href="https://github.com/">GitHub</a></p>
-          <p><a target="_blank" href="https://www.heroku.com/">Heroku</a></p>
-          <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap 4</a>, <a target="_blank" href="https://getbootstrap.com/docs/3.3/">v3.3</a></p>
-          <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
-          <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
-          <p><a target="_blank" href="https://www.staticgen.com/">StaticGen</a></p>
-          <p><a target="_blank" href="https://www.bloomberg.com/technology">Bloomberg Technology</a></p>
+          <a target="_blank" href="https://bitbucket.org/"><p>Bitbucket</p></a>
+          <a target="_blank" href="https://github.com/"><p>GitHub</p></a>
+          <a target="_blank" href="https://www.heroku.com/"><p>Heroku</p></a>
+          <a target="_blank" href="https://getbootstrap.com/"><p>Bootstrap v4</p></a>
+          <a target="_blank" href="https://getbootstrap.com/docs/3.3/"><p>Bootstrap v3.3</p></a>
+          <a target="_blank" href="https://developers.facebook.com/docs/facebook-login"><p>Facebook Login</p></a>
+          <a target="_blank" href="https://console.developers.google.com/"><p>Google API Console</p></a>
+          <a target="_blank" href="https://www.staticgen.com/"><p>StaticGen</p></a>
+          <!-- <a target="_blank" href="https://www.bloomberg.com/technology"><p>Bloomberg Technology</p></a> -->
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4">
           <h2>Business</h2>
-          <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
-          <p><a target="_blank" href="http://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
-          <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
-          <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
-          <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
-          <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
-          <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
-          <!-- <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p> -->
+          <a target="_blank" href="https://admin-official.line.me/"><p>LINE@</p></a>
+          <a target="_blank" href="http://tw.stock.yahoo.com/"><p>Yahoo!奇摩股市</p></a>
+          <a target="_blank" href="http://www.moneydj.com/"><p>MoneyDJ</p></a>
+          <a target="_blank" href="http://www.stockq.org/"><p>StockQ</p></a>
+          <a target="_blank" href="http://www.masterhsiao.com.tw/"><p>怪老子理財</p></a>
+          <a target="_blank" href="https://www.cmoney.tw/vt/"><p>股市大富翁</p></a>
+          <a target="_blank" href="https://www.stockfeel.com.tw/"><p>股感知識庫</p></a>
+          <a target="_blank" href="https://www.moneybar.com.tw/"><p>moneybar</p></a>
         </div>
         <div class="col-md-4">
           <h2>English</h2>
-          <p><a target="_blank" href="https://tw.dictionary.yahoo.com/">Yahoo奇摩字典</a></p>
-          <p><a target="_blank" href="https://www.vocabulary.com/">Vocabulary.com</a></p>
-          <p><a target="_blank" href="http://www.elllo.org/">ELLLO</a></p>
-          <p><a target="_blank" href="http://voicetube.tw/">VoiceTube</a></p>
-          <p><a target="_blank" href="http://learningenglish.voanews.com/">Voice of America</a></p>
-          <p><a target="_blank" href="http://www.netspeak.org/">Netspeak</a></p>
-          <p><a target="_blank" href="http://linggle.com/">Linggle 10^12</a></p>
+          <a target="_blank" href="https://tw.dictionary.yahoo.com/"><p>Yahoo奇摩字典</p></a>
+          <a target="_blank" href="https://www.vocabulary.com/"><p>Vocabulary.com</p></a>
+          <a target="_blank" href="http://www.elllo.org/"><p>ELLLO</p></a>
+          <a target="_blank" href="http://voicetube.tw/"><p>VoiceTube</p></a>
+          <a target="_blank" href="http://learningenglish.voanews.com/"><p>Voice of America</p></a>
+          <a target="_blank" href="http://www.netspeak.org/"><p>Netspeak</p></a>
+          <a target="_blank" href="http://linggle.com/"><p>Linggle 10^12</p></a>
+          <a target="_blank" href="https://www.coursera.org/"><p>Coursera</p></a>
         </div>
         <div class="col-md-4">
           <h2>Miscellaneous</h2>
-          <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
-          <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
-          <!-- <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p> -->
-          <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
-          <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
-          <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
-          <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a>, <a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">借閱</a></p>
-          <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
-          <!-- <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</a></p> -->
+          <a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning"><p>Packt</p></a>
+          <a target="_blank" href="https://www.udemy.com/"><p>udemy</p></a>
+          <a target="_blank" href="http://www.freepik.com/"><p>freepik</p></a>
+          <a target="_blank" href="https://open.163.com/khan/"><p>網易公開課</p></a>
+          <a target="_blank" href="https://www.junyiacademy.org/"><p>均一教育平台</p></a>
+          <a target="_blank" href="https://lis.nsysu.edu.tw/"><p>中山圖資處</p></a>
+          <a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht"><p>個人借閱</p></a>
+          <a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php"><p>教育廣播數位典藏</p></a>
+          <!-- <a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer"><p>System Font Changer</p></a> -->
         </div>
       </div>
 
