--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <a target="_blank" href="http://blockcast.it/"><p>區塊客</p></a>
           <a target="_blank" href="https://blocktrend.today/"><p>區塊勢</p></a>
           <a target="_blank" href="http://buy.yahoo.com.tw/"><p>Yahoo!奇摩購物</p></a>
-          <a target="_blank" href="http://24h.pchome.com.tw/index/"><p>PChome 24h購物</p></a>
+          <a target="_blank" href="http://24h.pchome.com.tw/index/"><p>PChome購物</p></a>
         </div>
         <div class="col-md-4">
           <h2>Tech</h2>
@@ -62,7 +62,7 @@
         <div class="col-md-4">
           <h2>Business</h2>
           <a target="_blank" href="https://admin-official.line.me/"><p>LINE@</p></a>
-          <a target="_blank" href="http://tw.stock.yahoo.com/"><p>Yahoo!奇摩股市</p></a>
+          <a target="_blank" href="http://pchome.megatime.com.tw/"><p>PChome股市</p></a>
           <a target="_blank" href="http://www.moneydj.com/"><p>MoneyDJ</p></a>
           <a target="_blank" href="http://www.stockq.org/"><p>StockQ</p></a>
           <a target="_blank" href="http://www.masterhsiao.com.tw/"><p>怪老子理財</p></a>
