--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/main.css?1812210714">
+    <link rel="stylesheet" href="/static/main.css?1812301500">
 
   </head>
 
@@ -54,7 +54,7 @@
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
           <p><a target="_blank" href="https://www.staticgen.com/">StaticGen</a></p>
-          <p><!-- <a target="_blank" href="https://www.bloomberg.com/technology">Bloomberg Technology</p> --></a>
+          <!-- <p><a target="_blank" href="https://www.bloomberg.com/technology">Bloomberg Technology</p></a> -->
         </div>
       </div>
 
@@ -63,7 +63,7 @@
           <h2>Business</h2>
           <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
           <p><a target="_blank" href="https://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
-          <p><!-- <a target="_blank" href="http://pchome.megatime.com.tw/">PChome股市</p> --></a>
+          <!-- <p><a target="_blank" href="http://pchome.megatime.com.tw/">PChome股市</p></a> -->
           <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
           <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
@@ -92,7 +92,7 @@
           <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
           <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
-          <p><!-- <a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</p> --></a>
+          <!-- <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</p></a> -->
         </div>
       </div>
 
