--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         <div class="col-md-4">
           <h2>Business</h2>
           <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
-          <p><a target="_blank" href="https://tw.stock.yahoo.com/">Yahoo!奇摩股市</a></p>
-          <!-- <p><a target="_blank" href="http://pchome.megatime.com.tw/">PChome股市</p></a> -->
+          <p><a target="_blank" href="http://pchome.megatime.com.tw/">PChome股市</p></a>
           <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
           <p><a target="_blank" href="http://www.stockq.org/">StockQ</a></p>
           <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
@@ -91,8 +90,7 @@
           <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
           <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
-          <p><a target="_blank" href="http://digitweb.ner.gov.tw/files/901-1000-56.php">教育廣播數位典藏</a></p>
-          <!-- <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</p></a> -->
+          <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</p></a>
         </div>
       </div>
 
