--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
           <p><a target="_blank" href="https://getbootstrap.com/docs/3.3/">Bootstrap v3.3</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
-          <p><a target="_blank" href="https://www.staticgen.com/">StaticGen</a></p>
+          <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&lang=zh_tw&sort=publication_date">Python 新書</a></p>
+          <!-- <p><a target="_blank" href="https://www.staticgen.com/">StaticGen</a></p> -->
           <!-- <p><a target="_blank" href="https://www.bloomberg.com/technology">Bloomberg Technology</p></a> -->
         </div>
       </div>
@@ -85,7 +86,8 @@
           <h2>Miscellaneous</h2>
           <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
           <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
-          <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
+          <!-- <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p> -->
+          <p><a target="_blank" href="https://pyone.tw/">碼寶程式教育中心</a></p>
           <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
           <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
           <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
