--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p><a target="_blank" href="https://getbootstrap.com/docs/3.3/">Bootstrap v3.3</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
-          <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&lang=zh_tw&sort=publication_date">Python 新書</a></p>
+          <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python 新書</a></p>
           <!-- <p><a target="_blank" href="https://www.staticgen.com/">StaticGen</a></p> -->
           <!-- <p><a target="_blank" href="https://www.bloomberg.com/technology">Bloomberg Technology</p></a> -->
         </div>
