--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
           <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python 新書</a></p>
-          <!-- <p><a target="_blank" href="https://www.staticgen.com/">StaticGen</a></p> -->
-          <!-- <p><a target="_blank" href="https://www.bloomberg.com/technology">Bloomberg Technology</p></a> -->
         </div>
       </div>
 
@@ -70,7 +68,6 @@
           <p><a target="_blank" href="http://www.masterhsiao.com.tw/">怪老子理財</a></p>
           <p><a target="_blank" href="https://www.stockfeel.com.tw/">股感知識庫</a></p>
           <p><a target="_blank" href="https://house123.com.tw/">house123</a></p>
-          <!-- <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p> -->
         </div>
         <div class="col-md-4">
           <h2>English</h2>
@@ -87,14 +84,12 @@
           <h2>Miscellaneous</h2>
           <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
           <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
-          <!-- <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p> -->
-          <p><a target="_blank" href="https://pyone.tw/">碼寶程式教育中心</a></p>
           <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
           <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
           <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
           <p><a target="_blank" href="https://findbiz.nat.gov.tw/fts">商工登記公示資料查詢</a></p>
-          <!-- <p><a target="_blank" href="https://www.wintools.info/index.php/advanced-system-font-changer">System Font Changer</p></a> -->
+          <p><a target="_blank" href="/misc-more/">More...</a></p>
         </div>
       </div>
 
