--- a/misc-more/index.html
+++ b/misc-more/index.html
@@ -9,12 +9,12 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/main.css?1812301504">
+    <link rel="stylesheet" href="/static/main.css?1908112323">
 
   </head>
 
   <body>
-    <div class="jumbotron jumbotron-main">
+    <div class="jumbotron jumbotron-vice">
       <div class="container">
         <h1>Unsorted Bookmarks</h1>
       </div>
