--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <div class="container favs-item">
+    <div class="container page-main favs-item">
       <div class="row">
         <div class="col-md-4">
           <h2>Life</h2>
