--- a/misc-more/index.html
+++ b/misc-more/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">
     <meta name="description" content="Bug's Bookmarks">
     <meta name="author" content="Bug">
-    <title>Unsorted Bookmarks</title>
+    <title>Unsorted Links</title>
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,11 +16,11 @@
   <body>
     <div class="jumbotron jumbotron-vice">
       <div class="container">
-        <h1>Unsorted Bookmarks</h1>
+        <h1>Unsorted Links</h1>
       </div>
     </div>
 
-    <div class="container favs-item">
+    <div class="container page-vice favs-item">
       <div class="row">
         <div class="col-md-4">
           <h2>Section 1</h2>
