--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/main.css?1908112323">
+    <link rel="stylesheet" href="/static/main.css?190812">
 
   </head>
 
@@ -89,7 +89,7 @@
           <p><a target="_blank" href="https://lis.nsysu.edu.tw/">中山圖資處</a></p>
           <p><a target="_blank" href="http://dec.lib.nsysu.edu.tw/patroninfo*cht">個人借閱</a></p>
           <p><a target="_blank" href="https://findbiz.nat.gov.tw/fts">商工登記公示資料查詢</a></p>
-          <p><a target="_blank" href="/misc-more/">More...</a></p>
+          <p><a target="_blank" href="/more/">More...</a></p>
         </div>
       </div>
 
