Modified more page

--- a/more/index.html
+++ b/more/index.html
@@ -38,6 +38,8 @@
           <p><a target="_blank" href="http://kata.coderdojo.com/wiki/Python_Path">Python Path</a></p>
           <p><a target="_blank" href="https://home.pearsonvue.com/python">Python Institute</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">Computer Science - YouTube</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/channel/UC9-y-6csu5WGm29I7JiwpnA">Computerphile - YouTube</a></p>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLS1QulWo1RIYt4e0WnBp-ZjCNq8X0FX0J">Python 3 Tutorial for Beginners - YouTube</a></p>
           <p><a target="_blank" href="https://web.stanford.edu/class/cs97si/">Programming Contests</p></a>
           <p><a target="_blank" href="https://globalgamejam.org/">Global Game Jam</a></p>
           <p><a target="_blank" href="http://www.csie.ntnu.edu.tw/~u91029/index.html">演算法筆記</a></p>
@@ -54,6 +56,8 @@
           <p><a target="_blank" href="https://shaform.com/csdream/">資夢</a></p>
           <p><a target="_blank" href="https://ithelp.ithome.com.tw/users/20103434/ironman/1225">資料安全與簡單加密演算法見面會</a></p>
           <p><a target="_blank" href="https://www.edx.org/course/ap-computer-science-a-java-programming-3">AP Computer Science A: Java</a></p>
+          <p><a target="_blank" href="https://www.openedu.tw/">中華開放教育平台</a></p>
+          <p><a target="_blank" href="https://www.openedu.tw/plus-courses.jsp">推動大學程式設計教學</a></p>
         </div>
       </div>
 
@@ -83,6 +87,7 @@
         <div class="col-md-4">
           <h2>Section 6</h2>
           <p><a target="_blank" href="https://web.dev/measure">Measure | web.dev</a></p>
+          <p><a target="_blank" href="https://www.cssfontstack.com/">CSS Font Stack</a></p>
           <p><a target="_blank" href="https://airtable.com/">Airtable</a></p>
           <p><a target="_blank" href="https://piktochart.com/">Piktochart</a></p>
           <p><a target="_blank" href="https://www.befunky.com/">BeFunky</a></p>
