Modify packt link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
         <div class="col-md-4">
           <h2>Miscellaneous</h2>
-          <p><a target="_blank" href="https://www.packtpub.com/packt/offers/free-learning">Packt</a></p>
+          <p><a target="_blank" href="https://www.packtpub.com/free-learning">Packt</a></p>
           <p><a target="_blank" href="https://www.udemy.com/">udemy</a></p>
           <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
           <p><a target="_blank" href="https://www.junyiacademy.org/">均一教育平台</a></p>
