Modified index page

--- a/more/index.html
+++ b/more/index.html
@@ -77,6 +77,7 @@
           <h2>Section 5</h2>
           <p><a target="_blank" href="http://www.freepik.com/">freepik</a></p>
           <p><a target="_blank" href="https://www.youtube.com/channel/UCHh5i83CFCk8DZyeEEIfZdA">English Speaking Practice - YouTube</a></p>
+          <p><a target="_blank" href="https://www.christinericcio.com/">Christine Riccio</a></p>
           <p><a target="_blank" href="https://www.bloomberg.com/technology">Bloomberg Technology</p></a>
           <p><a target="_blank" href="https://rich01.com/">Mr.Market 市場先生</a></p>
           <p><a target="_blank" href="https://www.moneybar.com.tw/">moneybar</a></p>
