Modified LINE ID

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Business</h2>
-          <p><a target="_blank" href="https://admin-official.line.me/">LINE@</a></p>
+          <p><a target="_blank" href="https://manager.line.biz/">LINE商用</a></p>
           <p><a target="_blank" href="https://www.cmoney.tw/finance/">CMoney股市</p></a>
           <p><a target="_blank" href="https://www.cmoney.tw/vt/">CMoney股市大富翁</a></p>
           <p><a target="_blank" href="http://www.moneydj.com/">MoneyDJ</a></p>
