Modified index page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p><a target="_blank" href="http://www.ithome.com.tw/">iThome</a></p>
           <p><a target="_blank" href="http://pansci.asia/">PanSci 泛科學</a></p>
           <p><a target="_blank" href="https://buzzorange.com/techorange/">TechOrange</a></p>
-          <p><a target="_blank" href="http://blockcast.it/">區塊客</a></p>
+          <p><a target="_blank" href="https://www.finlab.tw/">FinLab</a></p>
           <p><a target="_blank" href="http://buy.yahoo.com.tw/">Yahoo!奇摩購物</a></p>
           <p><a target="_blank" href="http://24h.pchome.com.tw/index/">PChome購物</a></p>
         </div>
