Updated static files version

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?191223">
+    <link rel="stylesheet" href="/static/main.css?201009">
 
   </head>
 
@@ -97,6 +97,6 @@
     <script src="/static/jquery.slim.min.js"></script>
     <script src="/static/popper.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
-    <script src="/static/main.js"></script>
+    <script src="/static/main.js?201009"></script>
   </body>
 </html>
