--- a/more/index.html
+++ b/more/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?191223">
+    <link rel="stylesheet" href="/static/main.css?201009">
 
   </head>
 
@@ -48,7 +48,7 @@
         </div>
         <div class="col-md-4">
           <h2>Section 3</h2>
-          <p><a target="_blank" href="https://kopu.chat/">寫點科普</a></p>          
+          <p><a target="_blank" href="https://kopu.chat/">寫點科普</a></p>
           <p><a target="_blank" href="http://www.mobileendzone.com/">達陣行動科技學院</a></p>
           <p><a target="_blank" href="http://eeclass.shsh.tn.edu.tw/course/browse">善高數位教室</a></p>
           <p><a target="_blank" href="https://blockchaindemo.io/">Blockchain Demo</a></p>
@@ -109,6 +109,6 @@
     <script src="/static/jquery.slim.min.js"></script>
     <script src="/static/popper.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
-    <script src="/static/main.js"></script>
+    <script src="/static/main.js?201009"></script>
   </body>
 </html>
