--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?201009">
+    <link rel="stylesheet" href="/static/main.css?210308">
 
   </head>
 
@@ -46,8 +46,8 @@
           <h2>Tech</h2>
           <p><a target="_blank" href="https://github.com/">GitHub</a></p>
           <p><a target="_blank" href="https://www.heroku.com/">Heroku</a></p>
-          <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap v4</a></p>
-          <p><a target="_blank" href="https://getbootstrap.com/docs/3.3/">Bootstrap v3.3</a></p>
+          <p><a target="_blank" href="https://getbootstrap.com/">Bootstrap</a></p>
+          <p><a target="_blank" href="https://getbootstrap.com/docs/4.6/">Bootstrap v4.6</a></p>
           <p><a target="_blank" href="https://developers.facebook.com/docs/facebook-login">Facebook Login</a></p>
           <p><a target="_blank" href="https://console.developers.google.com/">Google API Console</a></p>
           <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python 新書</a></p>
@@ -94,9 +94,9 @@
       </footer>
     </div>
 
-    <script src="/static/jquery.slim.min.js"></script>
+    <script src="/static/jquery.min.js"></script>
     <script src="/static/popper.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
-    <script src="/static/main.js?201009"></script>
+    <script src="/static/main.js?210308"></script>
   </body>
 </html>
