--- a/more/index.html
+++ b/more/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?201009">
+    <link rel="stylesheet" href="/static/main.css?210308">
 
   </head>
 
@@ -106,9 +106,9 @@
       </footer>
     </div>
 
-    <script src="/static/jquery.slim.min.js"></script>
+    <script src="/static/jquery.min.js"></script>
     <script src="/static/popper.min.js"></script>
     <script src="/static/bootstrap.min.js"></script>
-    <script src="/static/main.js?201009"></script>
+    <script src="/static/main.js?210308"></script>
   </body>
 </html>
