--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
     </div>
 
     <script src="/static/jquery.min.js"></script>
-    <script src="/static/popper.min.js"></script>
-    <script src="/static/bootstrap.min.js"></script>
+    <script src="/static/bootstrap.bundle.min.js"></script>
     <script src="/static/main.js?210308"></script>
   </body>
 </html>
